--- a/.github/workflows/load.yml
+++ b/.github/workflows/load.yml
@@ -41,8 +41,10 @@ jobs:
 
       - name: Commit and Push Changes
         run: |
-          git config --global user.email "vannebunny@gmail.com"
-          git config --global user.name "mvgomezl"
+          git config --global user.name 'GitHub Actions'
+          git config --global user.email 'actions@github.com'
           git add df.csv  # Replace with your chosen file format
           git commit -m "Saved DataFrame"
           git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.gita }}
