--- a/.github/workflows/load.yml
+++ b/.github/workflows/load.yml
@@ -1,4 +1,4 @@
-# This is a basic workflow to help you get started with Actions
+io# This is a basic workflow to help you get started with Actions
 
 name: Cargar iris
 
@@ -42,7 +42,7 @@ jobs:
       - name: Commit and Push Changes
         run: |
           git config --global user.name ${{secrets.user_user}}
-          git config --global user.email ${{secrets.correo_correo}}
+          git config --global user.email ${{secrets.email_email}}
           git add df.csv  # Replace with your chosen file format
           git commit -m "Saved DataFrame"
           git push
