--- a/.github/workflows/load.yml
+++ b/.github/workflows/load.yml
@@ -1,4 +1,4 @@
-io# This is a basic workflow to help you get started with Actions
+# This is a basic workflow to help you get started with Actions
 
 name: Cargar iris
 
@@ -10,8 +10,7 @@ on:
   pull_request:
     branches: [ "main" ]
   schedule:
-    - cron: '*/5 * * * *'  # Runs at 5.00 AM every day
-
+    - cron: '25 3 * * *'  # Runs at 5.00 AM every day
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
