--- a/.github/workflows/load.yml
+++ b/.github/workflows/load.yml
@@ -40,8 +40,8 @@ jobs:
 
       - name: Commit and Push Changes
         run: |
-          git config --global user.name 'mvgomezl'
-          git config --global user.email 'vanessbunny@gmail.com'
+          git config --global user.name "USERNAME=${{ secrets.USER_USER }}"
+          git config --global user.email "USEREMAIL=${{ secrets.EMAIL_EMAIL }}"
           git add df.csv  # Replace with your chosen file format
           git commit -m "Saved DataFrame"
           git push
