--- a/.github/workflows/load.yml
+++ b/.github/workflows/load.yml
@@ -41,6 +41,7 @@ jobs:
       - name: Commit and Push Changes
         run: |
           git config --global user.name "${{ secrets.USER_USER }}"
+          git config --global user.email "${{ secrets.EMAIL_EMAIL }}"
           git add df.csv  # Replace with your chosen file format
           git commit -m "Saved DataFrame"
           git push
